# ParetoAlgebraLib

./: CMakeLists.txt  README.md  README_LINUX.md  README_WIN.md  README_WIN.txt
Cudd_VS/: Cudd_VS.sln  Cudd_VS.vcxproj  Cudd_VS.vcxproj.filters  config.h
VC_Project/Pareto_Calculator/: Pareto_Calculator.sln  Pareto_Calculator.vcxproj  Pareto_Calculator.vcxproj.filters
VC_Project/Pareto_Calculator/gbdd/: gbdd.sln  gbdd.vcxproj  gbdd.vcxproj.filters
VisualStudio/: Betsy.vcxproj  Betsy.vcxproj.filters  Pareto_Calculator.sln  Pareto_Calculator.vcxproj  Pareto_Calculator.vcxproj.filters  ProdConsTest.vcxproj  ProdConsTest.vcxproj.filters  Test.vcxproj  Test.vcxproj.filters  cudd.vcxproj  cudd.vcxproj.filters  gbdd.vcxproj  gbdd.vcxproj.filters
doc/: CMakeLists.txt  doxy.cfg  history.txt
examples/: CMakeLists.txt  betsy.cc  prodconstest.cc  test.cc
src/: CMakeLists.txt  bddconfset.cc  bddconfset.h  conf.cc  conf.h  explicit.cc  explicit.h  pareto.h  paretobase.cc  paretobase.h  quantity.cc  quantity.h  symbolic.cc  symbolic.h  value.h
src/extra/: combinations.h  reduce.cc  reduce.h
src/gbdd/: CMakeLists.txt  bdd-equivalence-relation.cc  bdd-equivalence-relation.h  bdd-relation.cc  bdd-relation.h  bdd.cc  bdd.h  bool-constraint.h  cudd-space.cc  cudd-space.h  domain.cc  domain.h  gbdd.h  mutex-space.cc  mutex-space.h  relation-compat.h  sgi_ext.h  space.cc  space.h  structure-binary-relation.h  structure-constraint.cc  structure-constraint.h  structure-relation.cc  structure-relation.h
